Remove usages of `org.apache.commons.io.IOUtils` (#603)